# ReferenceBackend

./: .cproject  .gitignore  .project  CMakeLists.txt
app/: launcher.cpp
include/Avocado/: reference_backend.h
include/ReferenceBackend/: reference_backend.h  reference_backend_v2.hpp
include/avocado/: reference_backend.h
src/: CMakeLists.txt  activations.cpp  activations.hpp  basic_math.cpp  batchnorm.cpp  conversions.cpp  convolution.cpp  descriptors.cpp  descriptors.hpp  dropout.cpp  fp16.cpp  fp16.hpp  gemms.cpp  im2row.cpp  losses.cpp  metrics.cpp  optimizers.cpp  pooling.cpp  regularizers.cpp  tensor_binary_op.cpp  tensor_op.cpp  tensor_reduction.cpp  tensor_unary_op.cpp  utils.hpp  winograd.cpp  winograd_transforms.cpp
test/: test_launcher.cpp
